--- a/film/her.html
+++ b/film/her.html
@@ -3,17 +3,26 @@
 	this is totally not my first website :^) -->
 	<head>
 		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="../animate.css"/>
+		<link rel="stylesheet" type="text/css" href="../icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>her</title>
 	</head>
-	<body>
+	<body class="animated fadeIn">
 		<div class=wrapper>
-		<div id=sidebar>
+		<div id=sidebar class="animated fadeInLeft">
+			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
 			<a href="../index.html" class=sidebar>home</a><br>
-			<a href="film.html" class=sidebar>film</a><br>
 			<a href="../project/project.html" class=sidebar>projects</a><br>
-			<a href="../photo/photo.html" class=sidebar>photo</a><br>
+			<a href="film.html" class=sidebar>film</a><br>
+			<!-- <a href="../photo/photo.html" class=sidebar>photo</a><br> -->
+
+			<a href="http://facebook.com/nalan296"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+			<a href="http://github.com/stylate"><i class="fa fa-github fa-fw" aria-hidden="true"></i></a>
+			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
+			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
 		</div>
 
 	<h1><i>Her</i>: Human Connection and Technology</h1>
