--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>alan</title>
 	</head>
-	<body>
+	<body class= "animated fadeIn">
 		<div class=wrapper>
 		<div id=sidebar class="animated fadeInLeft">
 			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
@@ -34,16 +34,12 @@
 		<p>I'm an incoming third-year undergraduate student currently based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts. I like watching and talking about films and TV shows. I take pictures of people and things sometimes, too.</p>
 
 
+
 		<!--
 		edu
 
 
 		-->
-
-		<!--
-		<p>This website is best viewed in Chrome or Firefox. Enjoy your stay!</p>
-		<p id=copy>Copyright © All rights reserved.</p>
-		is this really necessary? -->
 	</div>
 	<script src="core.js"></script>
 	</body>
