--- a/project/project.html
+++ b/project/project.html
@@ -9,9 +9,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>projects</title>
 	</head>
-	<body class="animated fadeInLeft">
+	<body class="animated fadeIn">
 		<div class=wrapper>
-		<div id=sidebar>
+		<div id=sidebar class="animated fadeInLeft">
 			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
 			<a href="../index.html" class=sidebar>home</a><br>
 			<a href="project.html" class=sidebar>projects</a><br>
