tweaked jquery and index

--- a/film/film.html
+++ b/film/film.html
@@ -32,6 +32,7 @@
 			<p id=copy>*Click any of the photos below to read my past work.</p>
 			
 			<div id="films">
+				<a href="her.html"><img src="photos/her.jpg"></a>
 				<a href="room.html"><img src="photos/room.jpg"></a>
 				<a href="exmachina.html"><img src="photos/exmachina.jpg"></a>
 				<a href="blackmirror.html"><img src="photos/blackmirror.jpg"e></a>
