--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
 
 			<a href="photo/photo.html" class=sidebar>photo</a><br> -->
 
-			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-			<a href="http://github.com/stylate"><i class="fa fa-github fa-fw" aria-hidden="true"></i></a>
-			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
-			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
 		</div>
 
 
-		<p>Hello there!</p>
+		<p style="font-size:24px">Hello there!</p>
 
-		<p>I'm an incoming third-year undergraduate student currently based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts. I like watching and talking about films and TV shows. I take pictures of people and things sometimes, too.</p>
+		<p>I'm an incoming third-year undergraduate student currently based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
+
+			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
+			<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
+			<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterbloxd</a><br>
+			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
+
+
+
 
 
 
