--- a/film/exmachina.html
+++ b/film/exmachina.html
@@ -12,7 +12,7 @@
 	<body class="animated fadeIn">
 		<div class=wrapper>
 		<div id=sidebar class="animated fadeInLeft">
-			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
+			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
 			<a href="../index.html" class=sidebar>home</a><br>
 			<a href="../project/project.html" class=sidebar>projects</a><br>
 			<a href="film.html" class=sidebar>film</a><br>
