--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body class= "animated fadeIn">
 		<div class=wrapper>
 		<div id=sidebar class="animated fadeInLeft">
-			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
+			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
 			<a href="index.html" class=sidebar>home</a><br>
 			<a href="project/project.html" class=sidebar>projects</a><br>
 			<a href="film/film.html" class=sidebar>film</a><br>
@@ -31,7 +31,7 @@
 
 			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
 			<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
-			<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterbloxd</a><br>
+			<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
 
 
