--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<p style="font-size:24px">Hello there!</p>
 
-		<p>I'm an incoming third-year undergraduate student currently based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
+		<p>I'm an incoming third-year undergraduate student based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
 
 			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
 			<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
