--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
 		<p>I'm an incoming third-year undergraduate student based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
 
-			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
+			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/niggalan"> Instagram</a> &middot;
 			<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
 			<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
 
+		<p id=copy>This website is best viewed on non-mobile devices.</p>
 
 
 
