--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 	</head>
 	<body class= "animated fadeIn">
 		<div class=wrapper>
-		<div id=sidebar class="animated fadeInLeft">
+		<div id=sidebar class="animated fadeIn">
 			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
-			<a href="index.html" class=sidebar>home</a><br>
-			<a href="project/project.html" class=sidebar>projects</a><br>
-			<a href="film/film.html" class=sidebar>film</a><br>
+			<div class="animated fadeInLeft">
+				<a href="index.html" class=sidebar>home</a><br>
+				<a href="project/project.html" class=sidebar>projects</a><br>
+				<a href="film/film.html" class=sidebar>film</a><br>
+			</div>
+				<!-- 
+				open up this section again once i actually get a /decent/ portfolio going.
 
-			<!-- 
-			open up this section again once i actually get a /decent/ portfolio going.
-
-			<a href="photo/photo.html" class=sidebar>photo</a><br> -->
+				<a href="photo/photo.html" class=sidebar>photo</a><br> -->
 
 		</div>
 
