--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
 	</head>
 	<body class= "animated fadeIn">
 		<div class=wrapper>
-		<div id=sidebar class="animated fadeIn">
-			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
-			<div class="animated fadeInLeft">
-				<a href="index.html" class=sidebar>home</a><br>
-				<a href="project/project.html" class=sidebar>projects</a><br>
-				<a href="film/film.html" class=sidebar>film</a><br>
-			</div>
-				<!-- 
-				open up this section again once i actually get a /decent/ portfolio going.
-
-				<a href="photo/photo.html" class=sidebar>photo</a><br> -->
+		<div id=sidebar class="animated fadeInLeft">
+			<!-- <a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br> -->
+			<a href="index.html" class=sidebar>home</a><br>
+			<a href="project/project.html" class=sidebar>projects</a><br>
+			<a href="film/film.html" class=sidebar>film</a><br>
+			<!-- 
+			open up this section again once i actually get a /decent/ portfolio going.
+		
+			<a href="photo/photo.html" class=sidebar>photo</a><br> -->
 
 		</div>
 
 
-		<p style="font-size:24px">Hello there!</p>
+		<p style="font-size:26px">Alan Nguyen</p>
 
 		<p>I'm an incoming third-year undergraduate student based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
 
