--- a/index.html
+++ b/index.html
@@ -10,40 +10,33 @@
 		<title>alan</title>
 	</head>
 	<body class= "animated fadeIn">
+	
 		<div class=wrapper>
+		<!-- i'm bored of this sidebar. maybe i'll add it later.
 		<div id=sidebar class="animated fadeInLeft">
-			<!-- <a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br> -->
+			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
 			<a href="index.html" class=sidebar>home</a><br>
 			<a href="project/project.html" class=sidebar>projects</a><br>
 			<a href="film/film.html" class=sidebar>film</a><br>
-			<!-- 
+		
 			open up this section again once i actually get a /decent/ portfolio going.
 		
-			<a href="photo/photo.html" class=sidebar>photo</a><br> -->
-
-		</div>
-
-
-		<p style="font-size:26px">Alan Nguyen</p>
-
-		<p>I'm an incoming third-year undergraduate student based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts! I like watching and analyzing films and TV shows. I take pictures of people and things sometimes, too.</p>
-
-			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/niggalan"> Instagram</a> &middot;
-			<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
-			<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
-			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
-
-		<p id=copy>This website is best viewed on non-mobile devices.</p>
+			<a href="photo/photo.html" class=sidebar>photo</a><br>
+			
+		</div>-->
 
 
+		<p style="font-size:3rem">ALAN NGUYEN</p>
 
+		<p>I'm an undergrad student who is currently attending UC Berkeley. Crypto, math, and AI make my heart flutter. I'm also a film and television junkie who likes to take photos on the daily.</p>
+			<div id=links>
+				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/niggalan"> Instagram</a> &middot;
+				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
+				<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
+				<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
+			</div>
 
-
-		<!--
-		edu
-
-
-		-->
+		<!-- <p id=copy>This website is best viewed on non-mobile devices.</p> -->
 	</div>
 	<script src="core.js"></script>
 	</body>
