--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>-->
 
 
-		<p style="font-size:3rem; line-height: 5px">ALAN NGUYEN</p>
+		<h1>ALAN NGUYEN</h1>
 
 		<p>I'm an undergrad student who is currently attending UC Berkeley. Crypto, math, and AI make my heart flutter. I'm also a film and television junkie who likes to take photos on the daily.</p>
 			<div id=links>
