--- a/alternate.html
+++ b/alternate.html
@@ -1,6 +1,7 @@
 <html>
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylin.css"/>
 		<link rel="stylesheet" type="text/css" href="animate.css"/>
@@ -38,4 +39,5 @@
 	</div>
 	<script src="core.js"></script>
 	</body>
+	</meta>
 </html>
