--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <html>
-<!-- hi to those of you who read html comments
-	this is totally not my first website :^) -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
-		<link rel="stylesheet" type="text/css" href="stylin.css"/>
-		<link rel="stylesheet" type="text/css" href="animate.css"/>
+		<link rel="stylesheet" type="text/css" href="css/stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="js/core.js"></script>
 		<title>alan</title>
 	</head>
 	<body class= "animated fadeIn">
-	
+	<div id="particles-js"></div>
 		<div class=wrapper>
 		<!-- i'm bored of this sidebar. maybe i'll add it later.
 		<div id=sidebar class="animated fadeInLeft">
@@ -26,7 +25,7 @@
 			
 		</div>-->
 
-
+			<script src="js/particles.js"></script>
 		<h1>ALAN NGUYEN</h1>
 
 		<p>I'm an undergrad student who is currently attending UC Berkeley. Crypto, math, and AI make my heart flutter. I'm also a film and television junkie who likes to take photos on the daily.</p>
@@ -36,9 +35,8 @@
 				<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 				<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
 			</div>
-
-		<!-- <p id=copy>This website is best viewed on non-mobile devices.</p> -->
+		</div>
 	</div>
-	<script src="core.js"></script>
 	</body>
+	<script src="js/app.js"></script>
 </html>
