--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<p>I'm an undergrad student who is currently attending UC Berkeley. Crypto, math, and AI make my heart flutter. I'm also a film and television junkie who likes to take photos on the daily.</p>
 			<div id=links>
-				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/niggalan"> Instagram</a> &middot;
+				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
 				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
 				<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 				<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a>
