--- a/index.html
+++ b/index.html
@@ -12,22 +12,10 @@
 	<div id="particles-js"></div>
 	<body class= "animated fadeIn">
 		<div class=wrapper>
-		<!-- i'm bored of this sidebar. maybe i'll add it later.
-		<div id=sidebar class="animated fadeInLeft">
-			<a class=sidebar style="font-size:24px; font-family: 'Open Sans', serif">alan nguyen</a><br>
-			<a href="index.html" class=sidebar>home</a><br>
-			<a href="project/project.html" class=sidebar>projects</a><br>
-			<a href="film/film.html" class=sidebar>film</a><br>
-		
-			open up this section again once i actually get a /decent/ portfolio going.
-		
-			<a href="photo/photo.html" class=sidebar>photo</a><br>
-			
-		</div>-->
 
 		<h1>ALAN NGUYEN</h1>
 
-		<p>I'm an undergrad student who is currently attending UC Berkeley. Crypto, math, and AI make my heart flutter. I'm also a film and television junkie who likes to take photos on the daily.</p>
+		<p>Greetings! I'm an undergrad student, currently attending UC Berkeley as a junior. I enjoy chatting about artificial intelligence, and anything media related–film, music, photography, you name it. </p>
 			<div id=links>
 				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
 				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
