--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<h1>ALAN NGUYEN</h1>
 
-		<p>Greetings! I'm an undergrad student, currently attending UC Berkeley as a junior. I enjoy chatting about artificial intelligence, and anything media related–film, music, photos, you name it. </p>
+		<p>Greetings! I'm an undergrad student, currently attending UC Berkeley as a junior. I enjoy chatting about artificial intelligence and anything media related–film, music, photos, you name it. </p>
 			<div id=links>
 				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
 				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
