--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
 				<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 				<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a> &middot;
-                <i class="fa fa-file-o fa-fw" aria=hidden="true"></i><a href="http://stylate.github.io/resume.pdf"> Resume</a>
+                <i class="fa fa-file-o fa-fw" aria=hidden="true"></i><a href="http://stylate.github.io/docs/resume.pdf"> Resume</a>
 			</div>
 		</div>
 	</div>
