cleaner js, added photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<p>Greetings! I'm an undergrad student, currently attending UC Berkeley as a junior. I enjoy chatting about artificial intelligence and anything media related–film, music, photos, you name it. </p>
 			<div id=links>
-				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="http://instagram.com/alanhoodie"> Instagram</a> &middot;
+				<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="photo/photo.html"> Photos</a> &middot;
 				<i class="fa fa-github fa-fw" aria-hidden="true"></i><a href="http://github.com/stylate"> Github</a> &middot;
 				<i class="fa fa-film fa-fw" aria-hidden="true"></i><a href="http://letterboxd.com/carbine/"> Letterboxd</a><br>
 				<i class="fa fa-envelope fa-fw" aria-hidden="true"></i><a href="mailto:nguyenalan@berkeley.edu"> nguyenalan@berkeley.edu</a> &middot;
