--- a/photo/photo.html
+++ b/photo/photo.html
@@ -1,48 +1,25 @@
 <html>
-<!-- hi to those of you who read html comments
-	this is totally not my first website :^) -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
-		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
-		<link rel="stylesheet" type="text/css" href="../icons/css/font-awesome.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/animate.css"/>
+		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<title>photo</title>
+		<script src="../js/core.js"></script>
+		<title>alan</title>
 	</head>
-	<body>
-		<div class=wrapper>
+	<div id="particles-js"></div>
+	<body class= "animated fadeIn">
 		<div id=sidebar>
-			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
-			<a href="../index.html" class=sidebar>home</a><br>
-			<a href="../film/film.html" class=sidebar>film</a><br>
-			<a href="../project/project.html" class=sidebar>projects</a><br>
-			<a href="photo.html" class=sidebar>photo</a><br>
-
-			<a href="http://facebook.com/nalan296"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
-			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
+			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../index.html">< back</a>
 		</div>
+		<div class=wrapper>
 
-		<h1>Photos</h1>
-		<p>I'm a huge sucker for design and composition. Analyzing various films and directors, as well as taking inspiration from the plethora of photographers whom I follow on tumblr and Instagram, has inspired me to capture photos with emphasis on framing.</p>
+		<h1>PHOTO</h1>
 
-		<p>But in here, you'll just see a photo dump of everything I've taken recently.</p>
-
-		<p id=copy>Note: All photos below have been edited with VSCOCam/Adobe Lightroom.</p>
-
-		
-		<img src="photos/long.jpg" class=portfolio>
-		<img src="http://i.imgur.com/nz6uNj0.jpg" class=portfolio> <!-- cps -->
-		<img src="photos/escalator.jpg" class=portfolio>
-		<img src="photos/tiff.jpg" class=portfolio>
-		<img src="photos/fleet.jpg" class=portfolio>
-		<img src="http://i.imgur.com/58UCJGe.jpg" class=portfolio> <!-- boat -->
-
-
-		<!-- 
-		use this page as framework for uploading EVERY photo from vscocam and 	
-		-->
+		<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
+		</div>
 	</div>
-	<script src="../core.js"></script>
 	</body>
 </html>
