--- a/photo/photo.html
+++ b/photo/photo.html
@@ -1,12 +1,12 @@
 <html>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
-		<link rel="stylesheet" type="text/css" href="../css/stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/animate.css"/>
 		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="../js/core.js"></script>
+		<script src="../js/main.js"></script>
 		<title>alan</title>
 	</head>
 	<div id="particles-js"></div>
