--- a/photo/photo.html
+++ b/photo/photo.html
@@ -12,7 +12,7 @@
 	<div id="particles-js"></div>
 	<body class= "animated fadeIn">
 		<div id=sidebar>
-			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../index.html">< back</a>
+			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../">< back</a>
 		</div>
 		<div class=wrapper>
 
