--- a/photo/photo.html
+++ b/photo/photo.html
@@ -3,7 +3,6 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/animate.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/hover.css"/>
 		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -13,13 +12,13 @@
 	<div id="particles-js"></div>
 	<body class= "animated fadeIn">
 		<div id=sidebar>
-			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../" class="hvr-fade">< back</a>
+			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../">< back</a>
 		</div>
 		<div class=wrapper>
 
 		<h1>PHOTO</h1>
 
-		<p>More <u><a href="https://instagram.com/alanhoodie" class="hvr-fade">here</a></u>. </p>
+		<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
 
         </div>
 	</div>
