photo's index.html

--- a/photo/index.html
+++ b/photo/index.html
@@ -18,6 +18,8 @@
 
 		<h1>PHOTO</h1>
 
+		<p id=copy>* site in progress.</p>
+
 		<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
 
         </div>
