--- a/photo/index.html
+++ b/photo/index.html
@@ -3,26 +3,39 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/animate.css"/>
-		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
+		<link rel="stylesheet" type="text/css" href="../icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="../js/justifiedGallery.min.css" />
+		<script src="../js/jquery.justifiedGallery.min.js"></script>
 		<script src="../js/main.js"></script>
 		<title>alan</title>
 	</head>
 	<div id="particles-js"></div>
 	<body class= "animated fadeIn">
 		<div id=sidebar>
-			<i class="fa fa-instagram fa-fw" aria-hidden="true"></i><a href="../">< back</a>
+			<a href="../">< back</a>
 		</div>
 		<div class=wrapper>
 
-		<h1>PHOTO</h1>
+			<h1>PHOTO</h1>
 
-		<p id=copy>* site in progress.</p>
+			<p id=copy>* site in progress.</p>
 
-		<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
+			<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
+
+			<div id="photo">
+				<a href="photos/boat-purple.jpg"><img src="photos/boat-purple.jpg"/></a>
+				<a href="photos/capitola.jpg"><img src="photos/capitola.jpg"/></a>
+				<a href="photos/IMG_0026.jpg"><img src="photos/IMG_0026.jpg"/></a>
+				<a href="photos/google.jpg"><img src="photos/google.jpg"/></a>
+				<a href="photos/shoes.jpg"><img src="photos/shoes.jpg"/></a>
+				<a href="photos/flowers.jpg"><img src="photos/flowers.jpg"/></a>
+				<a href="photos/moffitt.jpg"><img src="photos/moffitt.jpg"/></a>
+			</div>
 
         </div>
+
 	</div>
 	</body>
 </html>
