moved jquery script to html

--- a/photo/index.html
+++ b/photo/index.html
@@ -34,6 +34,19 @@
 				<a href="photos/moffitt.jpg"><img src="photos/moffitt.jpg"/></a>
 			</div>
 
+			<script>
+				$("#photo").justifiedGallery();
+				$('#photo').justifiedGallery( {
+					rowHeight: 340,
+					maxRowHeight: false,
+					lastRow: 'hide',
+					margins: 3,
+					border: 10,
+					cssAnimation: true,
+					imagesAnimationDuration: 500,
+				});
+			</script>
+
         </div>
 
 	</div>
