fixed file extension

--- a/photo/index.html
+++ b/photo/index.html
@@ -27,7 +27,7 @@
 			<div id="photo">
 				<a href="photos/boat-purple.jpg"><img src="photos/boat-purple.jpg"/></a>
 				<a href="photos/capitola.jpg"><img src="photos/capitola.jpg"/></a>
-				<a href="photos/IMG_0026.jpg"><img src="photos/IMG_0026.jpg"/></a>
+				<a href="photos/IMG_0026.JPG"><img src="photos/IMG_0026.JPG"/></a>
 				<a href="photos/google.jpg"><img src="photos/google.jpg"/></a>
 				<a href="photos/shoes.jpg"><img src="photos/shoes.jpg"/></a>
 				<a href="photos/flowers.jpg"><img src="photos/flowers.jpg"/></a>
