--- a/photo/index.html
+++ b/photo/index.html
@@ -29,9 +29,13 @@
 				<a href="photos/capitola.jpg"><img src="photos/capitola.jpg"/></a>
 				<a href="photos/IMG_0026.JPG"><img src="photos/IMG_0026.JPG"/></a>
 				<a href="photos/google.jpg"><img src="photos/google.jpg"/></a>
-				<a href="photos/shoes.jpg"><img src="photos/shoes.jpg"/></a>
 				<a href="photos/flowers.jpg"><img src="photos/flowers.jpg"/></a>
 				<a href="photos/moffitt.jpg"><img src="photos/moffitt.jpg"/></a>
+				<a href="photos/cavempt.jpg"><img src="photos/cavempt.jpg"/></a>
+				<a href="photos/350s.JPG"><img src="photos/350s.JPG"/></a>
+				<a href="photos/cps.jpg"><img src="photos/cps.jpg"/></a>
+				<a href="photos/clown.jpg"><img src="photos/clown.jpg"/></a>
+				<a href="photos/lab.jpg"><img src="photos/lab.jpg"/></a>
 			</div>
 
 			<script>
