--- a/photo/index.html
+++ b/photo/index.html
@@ -25,17 +25,17 @@
 			<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
 
 			<div id="photo">
-				<a href="photos/boat-purple.jpg"><img src="photos/boat-purple.jpg"/></a>
-				<a href="photos/capitola.jpg"><img src="photos/capitola.jpg"/></a>
-				<a href="photos/IMG_0026.JPG"><img src="photos/IMG_0026.JPG"/></a>
-				<a href="photos/google.jpg"><img src="photos/google.jpg"/></a>
-				<a href="photos/flowers.jpg"><img src="photos/flowers.jpg"/></a>
-				<a href="photos/moffitt.jpg"><img src="photos/moffitt.jpg"/></a>
-				<a href="photos/cavempt.jpg"><img src="photos/cavempt.jpg"/></a>
-				<a href="photos/350s.JPG"><img src="photos/350s.JPG"/></a>
-				<a href="photos/cps.jpg"><img src="photos/cps.jpg"/></a>
-				<a href="photos/clown.jpg"><img src="photos/clown.jpg"/></a>
-				<a href="photos/lab.jpg"><img src="photos/lab.jpg"/></a>
+				<div><img src="photos/boat-purple.jpg"/></div>
+				<div><img src="photos/capitola.jpg"/></div>
+				<div><img src="photos/IMG_0026.JPG"/></div>
+				<div><img src="photos/google.jpg"/></div>
+				<div><img src="photos/flowers.jpg"/></div>
+				<div><img src="photos/moffitt.jpg"/></div>
+				<div><img src="photos/cavempt.jpg"/></div>
+				<div><img src="photos/350s.JPG"/></div>
+				<div><img src="photos/cps.jpg"/></div>
+				<div><img src="photos/clown.jpg"/></div>
+				<div><img src="photos/lab.jpg"/></div>
 			</div>
 
 			<script>
@@ -43,7 +43,7 @@
 				$('#photo').justifiedGallery( {
 					rowHeight: 340,
 					maxRowHeight: false,
-					lastRow: 'hide',
+					
 					margins: 3,
 					border: 10,
 					cssAnimation: true,
