--- a/photo/index.html
+++ b/photo/index.html
@@ -20,17 +20,15 @@
 
 			<h1>PHOTO</h1>
 
-			<p id=copy>* site in progress.</p>
-
-			<p>More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
+			<p>DSLR shots edited with Lightroom, and iPhone shots edited with VSCOCam. More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
 
 			<div id="photo">
+				<div><img src="photos/IMG_0026.JPG"/></div>
 				<div><img src="photos/boat-purple.jpg"/></div>
 				<div><img src="photos/capitola.jpg"/></div>
-				<div><img src="photos/IMG_0026.JPG"/></div>
+				<div><img src="photos/moffitt.jpg"/></div>
 				<div><img src="photos/google.jpg"/></div>
 				<div><img src="photos/flowers.jpg"/></div>
-				<div><img src="photos/moffitt.jpg"/></div>
 				<div><img src="photos/cavempt.jpg"/></div>
 				<div><img src="photos/350s.JPG"/></div>
 				<div><img src="photos/cps.jpg"/></div>
