denote photo site in progress

--- a/photo/index.html
+++ b/photo/index.html
@@ -20,7 +20,7 @@
 
 			<h1>PHOTO</h1>
 
-			<p>DSLR shots edited with Lightroom, and iPhone shots edited with VSCOCam. More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
+			<p>Site currently in progress. DSLR shots edited with Lightroom, and iPhone shots edited with VSCOCam. More <u><a href="https://instagram.com/alanhoodie">here</a></u>. </p>
 
 			<div id="photo">
 				<div><img src="photos/IMG_0026.JPG"/></div>
